Fix: Fixed gaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -766,7 +766,7 @@ section {
 
 /* =================== Skills =================== */
 .skills {
-  --gap: 5rem;
+  --gap: 4rem;
 }
 
 .skills-box {
